[package]
name = "fc-man"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.33"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "mount", "process"] }
once_cell = "1.20.2"
simplelog = "0.12.2"
tar = "0.4.42"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4"] }
